update of beat site

--- a/index.html
+++ b/index.html
@@ -5,8 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beat</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>Portfolio</li>
+                <li>Sobre</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
+        <section>
+            <h2>No compaço da batida</h2>
+            <img src="https://s3-alpha-sig.figma.com/img/d936/552b/b8771973a0d5a854bc937e3a6205abe9?Expires=1670198400&Signature=A2ZOhCP~5i1ykR3lTvMq7eHPcBdksrtaEqGTZqDwWvdkipu5RnEpXSbXYHaYlXbu3pdjEsx4kGoHss5A8~tirFto6ZQYbykNUZLz1rujLlXcmHEIn8llU5NoWG8QF8cY-a5HilxAcDksi~c-aeQkvVqxRLyCAVX26uHHg~aP~PfERAVmvKUXd1Qm1tt58HAS69Fou4R0JAbu4jJKCVikvu0NnQ-RHw36q8OVkcmoo~DFBI40eJSALKTre9P2RCtjRr~12kwoFr7dINAaKoe-u7LXCGtmQuDlx892Oxjc~ss5E4izKukT-FKnZ3e5HtvomeuJhNZKlymQy5wLTmnQDw__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="">
+        </section>
+        <nav class="secondHeaderNav">
+            <ul>
+                <li>Arte & Design</li>
+                <li>Estilo & Musica</li>
+                <li>Ebook & Videos</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <h3>AQUARELA</h3>
+            <p>Uma brincadeira com fotos , cores e efeitos, curta, compartilhe e deixe seu comentário, ficarei feliz pelo feedback.</p>
+        </div>
+        <section class="mainSection">
+            <figure>
+                <img class="mainImages" src="https://s3-alpha-sig.figma.com/img/45f1/b36e/c89446adcf831f909e63faf168a0e3cf?Expires=1670198400&Signature=cB1tpoyYwEWt28vTu3eUIuhoaXPBgKkWPbfWsuoR8CkEkKattDyGXRe2UR-gB0n~~3S69sehND~vTD94h77hqiGkAXMXVAX5KLAz5X64cZ7S-ykusy8V0VLnvUOa8ZXZw8hr5SJyBCkG8PDT1ldj-dT09ayYPo4U08dYozwKqpuj11sKpZumj-XqoJm7ucCPmX5C7nJRsQGru9osQATGaKOync4EHU-nIyb-BVY8s7RYrt6PU8nIw4MfT5dT1mZ7D9lRfqcftPgqiVrm4plAaLLGQomYV-G~5I0bWYQ4NbJUAWefMnizOm~fbe~1Jpbl7cR2PBrZKkoHym-dUhHKAg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt=""/>
+            </figure>
+            <figure>
+                <img class="mainImages" src="https://s3-alpha-sig.figma.com/img/7db9/004a/d8841af71b6a34ab98dbd809386754b5?Expires=1670198400&Signature=b~NkecuNh~ocwWyEKpsUIWmzSDxfuppEY7hzk2uaMgwLPH5wvZYdhjyzUP64pQFy5KLCokifJ6Ii3oaCDmPoy96GMvJczbvn1hTMT3qdyhcntXTrwf040SE61rNv6u~o3UlqkWLY7hgItvP60IAAiDBCy-WV3CTcwC2nIw75AEnY7MyVKgISJM2TMkwfWl439Q4bR6o3Qb74sdFycMMQwiDfJk7jcDiZ-AEy-g2xIkAJxwqwfjhCp-r7i37tcfpDn~jjggw0jbR-tQOn8aJiqhVwj2zsBT23dOc02pT1DogbyTwiIp6RnUHavENP07dAJlwJQiKvnPygUTCHUUMqBQ__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt=""/>
+            </figure>
+            <figure>
+                <img class="mainImages" src="https://s3-alpha-sig.figma.com/img/2118/eb23/df1696db6a14a5c7ceac8ea5b899c734?Expires=1670198400&Signature=ElFyLTQ~tTJVbCLY7YiynX50QuLQEljYXeHkyX8jSkT6wXJuTWP12og0BgDepLUsLYSlrq8b1Loh2ENpB6m5VMgdZwjzXnn4b83~PNThPKZzs9tnyQ2uRVoab7rOT6Rm1KvhoVLieMg0WFE1HpNDwnEJ9oXHtHp9jlEySGPsH0BjVL6k15yZkKHvMP6XCGzMJv-EUqel-6JRR4~AEJWek2uq3X2gYF5TzKJsPzT090iR3c0FaKCw8gLR7JQwPvw0VsDOEXBD3pNugZaEl5K3Yc~6v60q3XnCfH3SOHGn7pMEXZpcJ2gItJ78DdqY4T3xzmdxj5zZ173fiagsNfNElQ__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt=""/>
+            </figure>
+            <figure>
+                <img class="mainImages" src="https://s3-alpha-sig.figma.com/img/39c0/b6e2/d368d6bc3de59ca051047470c9965ace?Expires=1670198400&Signature=Q0fSxoUHCjqkIm7FG0DNaWlbnyzs7pZmQSIev0veAclvkywYXtp3i8Lfh2xUCLFzsH7BBePyIPSVES5yl2QCoJ6CtwSFyIiTB2cgs194SrGbo4DLadCpKN5CfhwN2~l15KcT1XZJaHeCeb17ORt-92kwaXjY5ct7qsIXCG8RQAyQ5wNTm4Dh44zVTM4KLj~AEoBUcMEawHTbs21DzS6Z8WAhaW6y3wpNNu83Z-lDFJUVJqzh2rmTdvrLNHa92cmYF9N5mezOLbG4G1R7DcYGjAKqAInJT05K5r2yqJElQRbfRiIywdhagz7-BakcIPBWi7IeEaiRJHv3bj8-l5YL8g__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt=""/>
+            </figure>
+        </section>
+        <p class="secondPMain">Veja mais</p>
+    </main>
+    <footer>
+        <div class="secondFooterDiv">
+            <figure>
+                <img src="https://s3-alpha-sig.figma.com/img/215a/2531/911067ebefe887188bd6ecee20501df5?Expires=1670198400&Signature=Zgop5RneLMgfrNkYiwn1QglBcz8TLvRCXcSmqh455m3IzpLegtFfXbhRxZ3FfjN-liMOfHPcWtOFkcaXkpAfOJ~SqKv3Raalq9KySsQ5bMmozOHsJyqiKnpOVD6zzhCsdGE8VSBvo3MhMPrXUKcU9XtcQtXWxoJADbOKyWcOprx-j~KETR3gjXO2tY~pN2sHtRaOmWfzEjiBUEkAz1To1cZlsqFned2-RdHzrBDtE6Lq7MUaQkY~YD4yWE7fuIvx4TsGryeuqo33yMA8aIx61rCZ5n5xQvShHHXrp5ubax8pHMGwU~VbB8K9fHZJWTqLRiOREmwlACpq60SoPrKSSA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="">
+            </figure>
+            <figure>
+                <img src="https://s3-alpha-sig.figma.com/img/a9c0/f18e/3183d8db3f903d1f0b50daa58bd8d9b4?Expires=1670198400&Signature=VJ02DDz1cHC0bVMsO1tyWt6v97xNL5b0njS3SAMsgUKv77H0HNjLdHHz4-FuZcW2v1GJTfDm6l4Jl7xd1rwvRh5G4zc~WYH9kaKxCfzb-6Jc~ss5PfaUsKkPu5Irc9mr~F~-bPRFBchzhyfDQbFixGbl7SSoKf2cLjOOJ97hY4Lg6qpHKqeLzzSvyHHpJks1qeYHEGYFNUGB~pKSsNN8Yg-JVaXk2QrdS0WDxYax-5GjHYd31rbgvfD9FLhYO19KWxc4oiC6D2fNqGY7ORPnQMu6HdzRBczP32uPaR-uwZar3QFPi8N~vISqLxgd0T6g8tzPHNaSrT5AteHEWb4Qaw__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="">
+            </figure>
+            <figure>
+                <img src="https://s3-alpha-sig.figma.com/img/1dc5/c749/bf9616fb1a143f4b534c43b8ca564f4a?Expires=1670198400&Signature=Vv3oZReIgARMWwDQZY5Kpg-SO1-slr8~p3II8Lr9lds6byZeBxhTFkFo2zr1AN8uB6c3ChgsdtsJZY0GC3yd2MsdYsnbF0L15yeeE-LEgX5SoJBUNSydl~3dUfS3C2jS~PuFuc1Dwqozi~EM8Rx6T7lDePhvO8MMdROXKVcWTShHEdteWPNECAB~KeJubyHr~JXNJPiT3sdmghh83uDsf6mlhyASC1hClPZp-YS-qVNxSwADnihfPN3z3enK6iDtd3iGQ6szg6hCuz~RKTU9BXCm9259Rpw3omK9DWq9au-hTQw2eZPywj2qr7IkM91VGPsXCzddX-wdY7-GVi7aMQ__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="">
+            </figure>
+            <figure>
+                <img src="https://s3-alpha-sig.figma.com/img/6e32/aa7f/ab09272aed3691046a69b1e3b416eb21?Expires=1670198400&Signature=PKjtV3zzIga9c5fAqEzCtbg8wvT4T7LzCyI3WPg4DXSdd87OsWSaacEcdCH0G0gpXuu6ah7C6MCVmNoS8qn1oXm1Q~zEe1mQrO23vWIremTfFfIBkMqSCvrALeyT7iUqL6FD8KVD87N4MtpYWGWqWKRcvK90DIJ3T9uuRr8VyzPWLlvEH9xASdHDt0sApxJllS5Xk-QvkXgH2EdXafwUo8g7mGTnkOIUcb9asx9dXMv1F7AbMNmFlX8LjEKntRzqF09EBiUcJgTrWVEL9l~zX4jepw3ZdJkIZBIQmibXpwdyLqCkYAuDtuIN6TgnS~1NtpQzszKJ~siTSWjvI-s8oQ__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="">
+            </figure>
+        </div>
+        <nav class="thirdNavFooter"> 
+            <ul class="thirdUlFooter">
+                <li>Portfolio</li>
+                <li>Sobre</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
